# RL_ShakeGame_project

./: LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/models_stats/actor_critic/: actor_critic_v1_sim.json  actor_critic_v2_sim.json  actor_critic_v3_sim.json
models/: actor.pth  actor_v1.pth  actor_v3.pth  critic.pth  critic_v3.pth
models/actor-critic/: actor_v2.pth  actor_v3.pth  critic_v1.pth  critic_v2.pth  critic_v3.pth
models/dqn/: dqn_agen_par_300_10.pkl  dqn_agent_par_300_10.pkl
models/polNet/: polNet_agent_par_10000_10.pkl  polNet_agent_par_15000_10.pkl  polNet_agent_par_20000_10.pkl  polNet_agent_par_5000_10.pkl
models/q-learning/: q_learning_table_par_15000_10.pkl  q_learning_table_par_50000_10.pkl
models/sarsa/: sarsa_table_par_15000_10.pkl  sarsa_table_par_50000_10.pkl
notebooks/: QLearning copy.ipynb  QLearning.ipynb  SARSA.ipynb  SimpleSnakeEnv.py  SnakeEnv.py  actor_critic.ipynb  environment_test.ipynb  plots.ipynb  q_learning_agent.pkl
notebooks/classical_rl_algotithms/: QLearning.ipynb  QLearningFullObs.ipynb  SARSA.ipynb
notebooks/deep_models/: DQN.ipynb  PolicyNetwork.ipynb  PolicyNetworkDS.ipynb  actor_critic.ipynb  reinforce.ipynb
notebooks/random_models/: RandomAgent.ipynb
reports/: Project_proposal.md
scripts/: actor_critic_run.py  dqn_run.py  policy_network_run.py  q_learning_run.py  sarsa_run.py  setup.sh
src/: ActorCritic.py  CustomSnakeEnv.py  DQN.py  FullObsSnakeEnv.py  ParObsSnakeEnv.py  PolicyNetwork.py  Qlearning.py  SARSA.py  SnakeEnv.py  utils.py
(+15 files in other folders)
