[tool.poetry]
name = "rl-shakegame-project"
version = "0.1.0"
description = ""
authors = ["Ivan Golov <ivangolov@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
torch = ">=2.2.2"
numpy = "^2.1.3"
gymnasium = "^1.0.0"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
pybind11 = ">=2.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
